--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,7 @@
 @import './sidebar.scss';
 @import './element-ui.scss';
 
-.definition-flex {
+.flex {
   display: -webkit-flex; /* 新版本语法: Chrome 21+ */
   display: -webkit-box; /* 老版本语法: Safari, iOS, Android browser, older WebKit browsers. */
   display: -moz-box; /* 老版本语法: Firefox (buggy) */
